Mon Jun  1 11:21:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_capture, fiber_store): reraise transferred error.

	* cont.c (fiber_switch): transfers dead fiber error to the previouse
	  or root fiber if the current fiber is dead.  [ruby-core:23651]

Mon Jun  1 07:20:02 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): returns Inf if
	  exp is bigger than DBL_MANT_DIG.

Sun May 31 23:26:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (istrailinggarbage): fixed typo.

Tue May 26 05:39:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (FilePathValue): prevent from GC.

	* include/ruby/ruby.h (NUM2LONG): added GCC specific optimization.

Tue May 26 03:38:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_each_char, rb_str_each_codepoint): string
	  length must be long.

Mon May 25 08:06:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_partition): should use the converted result.  a
	  patch from Marc-Andre Lafortune at [ruby-core:23540].

	* string.c (rb_str_rpartition): ditto.

Mon May 25 05:32:19 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi/core.rb (CGI::HTTP_STATUS): typo fixed.  a patch from
	  Nobuhiro IMAI.  [ruby-dev:38538]

Mon May 25 06:25:38 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_hash.rb (TestHash::test_equal2): recursive hashes
	  are handled properly now. ref: [ruby-core:23402]

	* test/ruby/test_m17n.rb (TestM17N#test_sprintf_p): test fixed

Sun May 24 22:48:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_exec_recursive_paired): new function for proper
	  handling of recursive arrays.  [EXPERIMENTAL] [ruby-core:23402]

	* array.c (rb_ary_equal, rb_ary_eql, rb_ary_cmp): use above.

	* hash.c (hash_equal): ditto.

Sun May 24 22:39:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (syserr_initialize): errno is int.
